--- a/src/views/index/components/TodoList/index.scss
+++ b/src/views/index/components/TodoList/index.scss
@@ -74,7 +74,6 @@
     font-family: inherit;
     font-weight: inherit;
     line-height: 1.4em;
-    border: 0;
     color: inherit;
     padding: 6px;
     border: 1px solid #999;
@@ -139,7 +138,7 @@
   }
   .todo-list li.editing .edit {
     display: block;
-    width: 506px;
+    width: 80%;
     padding: 12px 16px;
     margin: 0 0 0 43px;
   }
