--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,3 +63,18 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+
+//.el-table__fixed-header-wrapper {
+//  .el-table__header {
+//    th:not(.is-hidden):last-child {
+//      right: -1px;
+//    }
+//  }
+//}
+//
+//.el-table__row {
+//  td:not(.is-hidden):last-child {
+//    right: -1px;
+//  }
+//}
+
